# BioDex

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
assets/: curated_animal_sources.json
scripts/: generate_curated_animal_sources.py
src/: backbone_import.rs  bulk_import.rs  cache.rs  curated_animals.rs  db_worker.rs  demo.rs  local_db.rs  main.rs  perf.rs  service.rs  species.rs  tui.rs  world_map.rs
src/api/: ensembl.rs  gbif.rs  inat.rs  mod.rs  ncbi.rs  ollama.rs  wikipedia.rs
