[package]
name = "biodex"
version = "0.1.0"
edition = "2021"
description = "Terminal-native species atlas with cached images, range maps, and taxonomy browsing"
repository = "https://github.com/Jakeelamb/BioDex"
readme = "README.md"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
quick-xml = { version = "0.37", features = ["serialize"] }
urlencoding = "2"
dirs = "6"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
ansi-to-tui = "7"
textwrap = "0.16"
ratatui-image = "5"
image = "0.25"
rusqlite = { version = "0.32", features = ["bundled"] }
flate2 = "1.0"
csv = "1.3"
indicatif = "0.17"
rayon = "1.10"
num_cpus = "1.16"
tar = "0.4"
regex = "1"
